--- a/WeatherAPIApp/WeatherAPIApp/WeatherPage.xaml
+++ b/WeatherAPIApp/WeatherAPIApp/WeatherPage.xaml
@@ -2,7 +2,8 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WeatherAPIApp.WeatherPage"
-             Title="WeatherPage">
+             Title="WeatherPage" 
+             BackgroundColor="#000000">
     <VerticalStackLayout>
         <Label 
             x:Name="LblCity"
@@ -46,6 +47,32 @@
             HorizontalOptions="Center"
             FontSize="Subtitle"/>
 
+        <Label
+            x:Name="LblAirPressure"
+            Text="Atmospheric Pressure"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            FontSize="Subtitle"/>
 
+        <Label
+            x:Name="LblHumidity"
+            Text="Humidity"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            FontSize="Subtitle"/>
+
+        <Label
+            x:Name="LblSunrise"
+            Text="Sunrise"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            FontSize="Subtitle"/>
+
+        <Label
+            x:Name="LblSunset"
+            Text="Sunset"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            FontSize="Subtitle"/>
     </VerticalStackLayout>
 </ContentPage>
